# non_human_sem_aff

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
affordance_mapping/: compute.py  evaluate.py  experiment.py  utils.py
affordance_mapping/models/: anthropic.py  foundation_model.py  gemini.py
configs/: evaluation_config.yaml  experiment_config.yaml
prompts/: prompts.json
src/: evaluate.py  experiment.py
src/models/: openai.py
src/robot/: robot_localisation.py
